objects/Alfa__c.object
<CustomObject>
    <fields>
        <fullName>A__c</fullName>
        <label>A</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B__c</fullName>
        <label>B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Beta</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Beta__c.TestPicklist__c</field>
                <operation>equals</operation>
                <value>A_v, D_v</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Beta__c</referenceTo>
        <relationshipLabel>Alfas</relationshipLabel>
        <relationshipName>Alfas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <label>C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestFormula__c</fullName>
        <formula>CASE( TestPicklistAlfa__c, &quot;A_v&quot;, &quot;T&quot;, &quot;F&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestPicklistAlfa__c</fullName>
        <label>TestPicklistAlfa</label>
        <picklist>
            <picklistValues>
                <fullName>A_v</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B_v</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C_v</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D_v</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TypeId__c</fullName>
        <label>TypeId</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Alfa</label>
    <listViews>
        <fullName>All</fullName>
        <columns>A__c</columns>
        <columns>B__c</columns>
        <columns>C__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alfas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>